css/style.css
body{
	background-color: #ffffff;
}
[type="radio"]:checked+label:after, [type="radio"].with-gap:checked+label:after {
	background-color: #726dfd !important;
}
[type="radio"]:checked+label:after, [type="radio"].with-gap:checked+label:after {
	background-color: #726dfd !important;
}
[type="radio"]:checked+label:after, [type="radio"].with-gap:checked+label:before, [type="radio"].with-gap:checked+label:after{
	border-color: #726dfd !important;
}
form input:focus,form textarea:focus{
	border-bottom-color: #726dfd !important;
}
/*input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea.materialize-textarea{
	border-color: white !important;
}*/
.input-field label{
	color: white !important;
}
.progress .determinate {
	background-color: #726dfd !important;
}
.progress{
	background-color: white !important;
	height: 6px !important;
	border-radius: 0 !important;
}
.hidee{
	display: none;
}
.showw{
	display: block;
}
.domain_name{
	font-size: 28px;
}
@media only screen and (max-width: 500px) {
    /* for mobiles */
    .first-section{
    	padding: 20px 13px;
    }
    .form-body , #form-body-3{
    	width: 85%;
    }
	footer{
		text-align: center;
	}
	.cross-icon{
		position: relative;
		right: 10px;
	}
}
@media only screen and (min-width: 502px) {
    /* for mobiles */
    .first-section{
    	padding: 30px 50px;
    }
    .form-body , #form-body-3{
		width: 75%;
	}

}
.form-body{
	/*padding : 30px 50px;*/
	margin-top: 30px;
	/*width: 75%;*/
	margin-left: auto;
	margin-right: auto;
	color: white;
	height: 600px;
}
/*.first-section{
	padding: 30px 50px;
}*/
.tech-heading{
	padding-top: 30px;
	padding-left: 50px;
}
.above-srcollbar{
	padding-right: 10px;
}

#tech-form{
	padding: 0 50px;
	height: 462px;
	overflow-y: auto;
}

#tech-form::-webkit-scrollbar {
	background-color: #424242;
	width: 9px;
	padding-right: 10px;
}
#tech-form::-webkit-scrollbar-thumb {
    background-color: #bdbdbd;
    border-radius: 10px;
}
#design-form{
	padding: 0 50px;
	height: 466px;
}
#management-form{
	padding: 0 50px;
	height: 466px;
}
p label{
	color: white;
}
#sub_btn{
	text-align: center;
	color: white;
	padding: 11px;
	width: 100%;
	border: none;
	font-size: 14px;
	letter-spacing: 1px;
}
.second-section{
	background-color: #212121;
}
footer{
	padding-left: 70px;
}
footer a{
	color: white;
	margin-right: 20px;
	margin-top: 10px;
	margin-bottom: 10px;
}
.change_category{
	color: #726dfd ;
	cursor: pointer;
}

.h5{
	margin-bottom: 0 !important;
}
.cross_icon{
	margin-top: 15px;
	cursor: pointer;
}
.main-content{
	margin-left: auto;
	margin-right: auto;
	width: 80%;
}
.p-margin{
	margin-top: 0 !important;
}

/* response.html styles*/
/*888888888888888888888*/
#form-body-3{
	padding: 20px 50px;
	margin-top: 20px;
	margin-right: auto;
	margin-left: auto;
	height: 600px;
	color: white;
	text-align: center;
}
#got-it-btn-2{
	text-align: center;
	color: white;
	padding: 11px;
	width: 100%;
	border: none;
	font-size: 14px;
	letter-spacing: 1px;
}
#whole-section
{
	position: relative;
	top: 25%;
}

